--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
       
       - name: Push image to tagged version
         run: |
+          IMAGE_ID=onlyjsmith/$IMAGE_NAME
+
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
 
@@ -44,17 +46,7 @@ jobs:
           # Use Docker `latest` tag convention
           [ "$VERSION" == "master" ] && VERSION=latest
 
-          echo IMAGE_ID=$IMAGE_NAME
-          echo VERSION=$VERSION
-
-          docker tag image $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
-
-      - name: Push image to latest
-        run: |
-          VERSION="latest"
-
-          echo IMAGE_ID=$IMAGE_NAME
+          echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
 
           docker tag image $IMAGE_ID:$VERSION
