--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       
       - name: Push image to tagged version
         run: |
-          IMAGE_ID=onlyjsmith/$IMAGE_NAME
+          IMAGE_ID=$IMAGE_NAME
 
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
